force-app/main/default/objects/PerscriptionMaster__c/PerscriptionMaster__c.object-meta.xml
<CustomObject>
    <label>PerscriptionMaster</label>
    <nameField>
        <label>PerscriptionMaster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PerscriptionMasters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>