force-app/main/default/objects/PerscriptionMaster__c/fields/PerCode__c.field-meta.xml
<CustomField>
    <fullName>PerCode__c</fullName>
    <label>PerCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>