force-app/main/default/objects/PerscriptionMaster__c/fields/PerRate__c.field-meta.xml
<CustomField>
    <fullName>PerRate__c</fullName>
    <label>PerRate</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>