force-app/main/default/objects/PerscriptionMaster__c/fields/PerscriptionName__c.field-meta.xml
<CustomField>
    <fullName>PerscriptionName__c</fullName>
    <label>PerscriptionName</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>